# cairo-svg-invalid

./: .gitignore  meson.build  test-svg.c
.github/workflows/: build.yml
subprojects/: cairo.wrap  freetype2.wrap  pango.wrap
subprojects/packagefiles/: cairo-image-fix.diff
